# moex-bond-search-and-analysis

./: .gitignore  1_bonds_search by criteria.py  1_bonds_search_by_criteria.py  2_bonds_search coupons.py  3_bonds_news search.py  3_bonds_news_search.py  4_bonds_calculation purchase volume.py  README.md  bond_search_2025-02-15.xlsx  bond_search_2025-02-26.xlsx  bond_search_2025-03-06.xlsx  bond_search_2025-03-10.xlsx  bond_search_2025-03-24.xlsx  bond_search_2025-04-17.xlsx  bond_search_2025-05-23.xlsx  bond_search_2025-06-17.xlsx  bond_search_2025-07-17.xlsx  bond_search_2025-08-05.xlsx  bond_search_2025-09-09.xlsx  bond_search_2025-11-13.xlsx  bonds.xlsx  bonds_utils.py  install_requirements.bat  install_requirements.command  pyproject.toml  requirements.txt
docs/: workflow.pulm
src/: cli.py
src/moex_bond_search_and_analysis/: app.py  consts.py  logger.py  moex.py  news.py  schemas.py  utils.py
src/moex_bond_search_and_analysis/plugins/: excel.py
tests/: conftest.py  test_moex.py
