[project]
name = "moex-bond-search-and-analysis"
version = "0.1.0"
description = "Поиск ликвидных облигаций на Московской Бирже и их анализ"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "emoji>=2.14.1",
    "feedparser>=6.0.11",
    "humanize>=4.12.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]
